# SVF

./: .clang-format  .cmake-format.py  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml  compile_commands.json  config.h.in  format-code.sh
.github/workflows/: clang-format-check.yml  cmake_build_debug_asan.yml  cmake_build_release.yml
cmake/: svf_macros.cmake
include/CUDD/: cudd.h  cuddInt.h  epd.h  mtr.h  mtrInt.h  st.h  util.h
include/DDA/: ContextDDA.h  DDAClient.h  DDAPass.h  DDAStat.h  DDAVFSolver.h  FlowDDA.h
include/Graphs/: ConsG.h  ConsGEdge.h  ConsGNode.h  ExternalPAG.h  GenericGraph.h  GraphPrinter.h  ICFG.h  ICFGEdge.h  ICFGNode.h  ICFGStat.h  OfflineConsG.h  PAG.h  PAGEdge.h  PAGNode.h  PTACallGraph.h  SVFG.h  SVFGEdge.h  SVFGNode.h  SVFGOPT.h  SVFGStat.h  ThreadCallGraph.h  VFG.h  VFGEdge.h  VFGNode.h
include/MSSA/: MSSAMuChi.h  MemPartition.h  MemRegion.h  MemSSA.h  SVFGBuilder.h
include/MTA/: FSMPTA.h  LockAnalysis.h  MHP.h  MTA.h  MTAAnnotator.h  MTAResultValidator.h  MTAStat.h  PCG.h  TCT.h
include/MemoryModel/: AbstractPointsToDS.h  ConditionalPT.h  LocationSet.h  MemModel.h  MutablePointsToDS.h  PAGBuilderFromFile.h  PTAStat.h  PTAType.h  PointerAnalysis.h  PointerAnalysisImpl.h
include/SABER/: DoubleFreeChecker.h  FileChecker.h  LeakChecker.h  ProgSlice.h  SaberAnnotator.h  SaberCheckerAPI.h  SaberSVFGBuilder.h  SrcSnkDDA.h
include/SVF-FE/: BreakConstantExpr.h  CHG.h  CPPUtil.h  CallGraphBuilder.h  CommonCHG.h  DCHG.h  DataFlowUtil.h  GEPTypeBridgeIterator.h  Graph2Json.h  ICFGBuilder.h  LLVMModule.h  LLVMUtil.h  LocMemModel.h  PAGBuilder.h  SVFProject.h  SymbolTableInfo.h
include/Tests/Graphs/: ICFG.hpp  (+3 more)
include/Util/: Annotator.h  BasicTypes.h  CFLSolver.h  Casting.h  Conditions.h  CxtStmt.h  DPItem.h  ExtAPI.h  NodeIDAllocator.h  Options.h  PathCondAllocator.h  SCC.h  SVFBasicTypes.h  SVFModule.h  SVFUtil.h  Serialization.h  ThreadAPI.h  TypeBasedHeapCloning.h  WorkList.h  boost_classes_export.h  boost_classes_export_impl.h  boost_classes_export_key.h
include/WPA/: Andersen.h  AndersenSFR.h  CSC.h  FlowSensitive.h  FlowSensitiveTBHC.h  Steensgaard.h  TypeAnalysis.h  VersionedFlowSensitive.h  WPAFSSolver.h  WPAPass.h  WPASolver.h  WPAStat.h
lib/: CMakeLists.txt
lib/CUDD/: CMakeLists.txt  cpu_time.c  cuddAPI.c  cuddAddIte.c  cuddAnneal.c  cuddBddAbs.c  cuddBddIte.c  cuddCache.c  cuddCheck.c  cuddCof.c  cuddExact.c  cuddGenetic.c  cuddGroup.c  cuddInit.c  cuddInteract.c  cuddLCache.c  cuddLinear.c  cuddRef.c  cuddReorder.c  cuddSat.c  cuddSymmetry.c  cuddTable.c  cuddUtil.c  cuddWindow.c  cuddZddFuncs.c  cuddZddGroup.c  cuddZddIsop.c  cuddZddLin.c  cuddZddReord.c  cuddZddSetop.c  cuddZddSymm.c  datalimit.c  epd.c  mtrBasic.c  mtrGroup.c  safe_mem.c  st.c
lib/DDA/: ContextDDA.cpp  DDAClient.cpp  DDAPass.cpp  DDAStat.cpp  FlowDDA.cpp
lib/Graphs/: ConsG.cpp  ExternalPAG.cpp  ICFG.cpp  OfflineConsG.cpp  PAG.cpp  PTACallGraph.cpp  SVFG.cpp  SVFGOPT.cpp  SVFGStat.cpp  ThreadCallGraph.cpp  VFG.cpp
lib/MSSA/: MemPartition.cpp  MemRegion.cpp  MemSSA.cpp  SVFGBuilder.cpp
lib/MTA/: FSMPTA.cpp  LockAnalysis.cpp  MHP.cpp  MTA.cpp  MTAAnnotator.cpp  MTAResultValidator.cpp  MTAStat.cpp  PCG.cpp  TCT.cpp
lib/MemoryModel/: LocationSet.cpp  MemModel.cpp  PAGBuilderFromFile.cpp  PointerAnalysis.cpp  PointerAnalysisImpl.cpp
lib/SABER/: DoubleFreeChecker.cpp  FileChecker.cpp  LeakChecker.cpp  ProgSlice.cpp  SaberAnnotator.cpp  SaberCheckerAPI.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp
lib/SVF-FE/: BreakConstantExpr.cpp  CHG.cpp  CPPUtil.cpp  CallGraphBuilder.cpp  DCHG.cpp  DataFlowUtil.cpp  Graph2Json.cpp  ICFGBuilder.cpp  LLVMModule.cpp  LLVMUtil.cpp  LocMemModel.cpp  PAGBuilder.cpp  SVFProject.cpp  SymbolTableInfo.cpp
lib/Tests/Graphs/: TestGraph.cpp
lib/Util/: Conditions.cpp  ExtAPI.cpp  NodeIDAllocator.cpp  Options.cpp  PTAStat.cpp  PathCondAllocator.cpp  SVFModule.cpp  SVFUtil.cpp  Serialization.cpp  ThreadAPI.cpp  TypeBasedHeapCloning.cpp
lib/WPA/: Andersen.cpp  AndersenHCD.cpp  AndersenHLCD.cpp  AndersenLCD.cpp  AndersenSCD.cpp  AndersenSFR.cpp  AndersenStat.cpp  AndersenWaveDiff.cpp  AndersenWaveDiffWithType.cpp  CSC.cpp  FlowSensitive.cpp  FlowSensitiveStat.cpp  FlowSensitiveTBHC.cpp  Steensgaard.cpp  TypeAnalysis.cpp  VersionedFlowSensitive.cpp  VersionedFlowSensitiveStat.cpp  WPAPass.cpp
scripts/: MyLSAN.supp  casting_test_data.yaml  find_and_execute_unittests.sh  gen_graph_cast_tests.py  gen_serialization_exports.py  graph_type_info.yaml  setup_github_ci_container.sh
test-env/: Dockerfile
tests/: CMakeLists.txt
tests/CHG/: CMakeLists.txt  VirtualFunc_non_overried.cpp  callsite.cpp  callsite_dynmemory.cpp  callsite_staticmemory.cpp  circular_dependencies.cpp  interproc_callsite.cpp  interproc_callsite_double.cpp
tests/CPPUtils/: CMakeLists.txt
tests/ICFG/: fptr_test.cpp  static_call_test.cpp  virt_call_test.cpp
tests/PTACallGraph/: CMakeLists.txt  DirectMultipleCalls.c
tests/ThreadAPI/: SimplePThread_example.c
tests/simple/: CMakeLists.txt  simple.cpp
tools/: CMakeLists.txt
tools/DDA/: CMakeLists.txt  dda.cpp
tools/Example/: CMakeLists.txt  svf-ex.cpp
tools/SABER/: CMakeLists.txt  saber.cpp
tools/WPA/: CMakeLists.txt  wpa.cpp
tools/chrome-gl-analysis/: CMakeLists.txt  chrome-gl-analysis.cpp  my_inst_visitor.h
tools/chrome-gl-analysis/tests/svfg/: c++_virtual_0.cpp  mock_bufferdata.cpp  simple_0.c  simple_1.c  simple_2.c  simple_3.c  simple_4.c
tools/chrome-gl-analysis/tests/try/: simple1.c
unittests/: CMakeLists.txt
unittests/CHG/: CHG_unittests.cpp  CMakeLists.txt
unittests/CPPUtils/: CMakeLists.txt  VTBL_test.cpp
unittests/Cast/: PTACallGraphCasting_unittests.cpp  cast_unittests.cpp  casting_test_rawptr.h  casting_test_shared_ptr.h  casting_test_unique_ptr.h
unittests/ConstraintGraph/: ConstraintGraph_unittests.cpp
unittests/GraphAlgorithms/: SCC_unittests.cpp
unittests/ICFG/: ICFG_unittests.cpp
unittests/PAG/: PAG_unittests.cpp
unittests/PTACallGraph/: PTACallGraph_unittests.cpp
unittests/PointerAnalysis/: Andersen_unittests.cpp  PointerAnalysis_unittests.cpp
(+19 files in other folders)
