set(SOURCES
	cuddTable.c
	cuddInit.c
	cuddAPI.c
	cuddRef.c
	cuddCheck.c
	cuddUtil.c
	cuddCof.c
	cuddSat.c
	cuddReorder.c
	cuddAddIte.c
	cuddBddIte.c
	cuddBddAbs.c
	cuddZddReord.c
	safe_mem.c
	mtrBasic.c
	mtrGroup.c
	cuddCache.c
	cuddLCache.c
	cuddInteract.c
	cuddGroup.c
	cuddAnneal.c
	cuddExact.c
	cuddGenetic.c
	cuddLinear.c
	cuddSymmetry.c
	cuddWindow.c
	cuddZddFuncs.c
	cuddZddGroup.c
	cuddZddIsop.c
	cuddZddSetop.c
	cuddZddLin.c
	cuddZddSymm.c
	datalimit.c
	cpu_time.c
	epd.c
	st.c
)

add_library(Cudd SHARED ${SOURCES})

add_compile_definitions(HAVE_IEEE_754)
add_compile_definitions(SIZEOF_VOID_P=8)
add_compile_definitions(SIZEOF_LONG=8)

set_target_properties(Cudd PROPERTIES COMPILE_FLAGS "-Wno-format \
-Wno-int-to-pointer-cast -Wno-pointer-to-int-cast \
-Wno-sign-compare \
-Wno-implicit-fallthrough")
